@@ -1,3 +1,10 @@
+Mon  8th Mar 2010       Proofrecording/diffs/basics.ml [new file]
+
+Chantal Keller pointed out that the "needs" directive is wrong in the
+proof-recording version where separate type, term and theorem files are used in
+place of fusion. Fixed this by putting the version of basics.ml without the
+"needs" line in the diffs directory.
+
 Sun  7th Mar 2010       passim
 
 Moved more hol-online changes upstream, adding explicit "needs" directives to
